# taskman

./: Cargo.toml
task_creator/: Cargo.toml
task_creator/src/: main.rs
task_creator/src/application/: app_state.rs  mod.rs
task_creator/src/application/services/: creator.rs  mod.rs
task_creator/src/domain/: mod.rs
task_creator/src/domain/interfaces/: creator.rs  mod.rs
task_creator/src/domain/models/: task.rs
task_creator/src/handlers/: create_task.rs  mod.rs
task_creator/src/handlers/dto/: content.rs
task_creator/src/infrastructure/: filesystem.rs
task_logger/: Cargo.toml
task_logger/src/: main.rs
task_logger/src/application/: app_state.rs  mod.rs
task_logger/src/application/services/: logger.rs
task_logger/src/domain/: mod.rs
task_logger/src/domain/interfaces/: filesystem.rs  logger.rs  mod.rs
task_logger/src/domain/models/: log.rs
task_logger/src/handlers/: poll_fs.rs
task_logger/src/infrastructure/: filesystem.rs  mod.rs
task_processor/: Cargo.toml
task_processor/src/: main.rs
task_processor/src/application/: app_state.rs  mod.rs
task_processor/src/application/services/: mod.rs  processor.rs
task_processor/src/domain/interfaces/: filesystem.rs  mod.rs  processor.rs
task_processor/src/domain/models/: task.rs
task_processor/src/handlers/: mod.rs  poll_fs.rs
task_processor/src/infrastructure/: filesystem.rs  mod.rs
