[workspace]
members = [ "task_creator", "task_logger","task_processor"]
resolver = "2"

[workspace.dependencies]
notify = "7.0.0"
log = "0.4.22"
env_logger = "0.11.5"
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["serde_derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "rt", "fs"] }
axum = "0.7.7"
dotenvy = "0.15.7"
