[package]
name = "task_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
axum = { version = "0.7.7", features = ["macros"] }
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
dotenvy = "0.15.7"
