[package]
name = "task_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "7.0.0"
tokio = { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread", "fs", "sync"] }
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
axum = "0.7.7"
dotenvy = "0.15.7"